# yt-summariser

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  docker-compose.yml  event.js  index.html  manage.py  pyproject.toml  requirements.txt  run_tests.py  search_feature.md  start_celery.sh  start_celery_concurrent.sh  start_celery_parallel.sh  start_server.sh  temp_file_logger.py
.github/workflows/: lint-and-type-check.yml
ai_utils/: __init__.py  config.py  models.py  search_process_factories.py  search_process_models.py  search_process_serializers.py
ai_utils/interfaces/: __init__.py  embeddings.py  llm.py  vector_store.py
ai_utils/providers/: __init__.py  gemini_llm.py  openai_embeddings.py  openai_llm.py  pinecone_store.py  weaviate_store.py
ai_utils/services/: __init__.py  embedding_service.py  llm_service.py  registry.py  vector_service.py
ai_utils/utils/: __init__.py  batch_operations.py  performance.py  text_processing.py
api/: admin.py  apps.py  exceptions.py  models.py  schemas.py  serializers.py  urls.py  validators.py  views.py
api/migrations/: 0001_initial.py  0002_urlrequesttable_request_id.py  0003_urlrequesttable_search_request.py  0004_add_search_request_index.py  0005_remove_urlrequesttable_search_request_idx.py  0006_urlrequesttable_celery_task_id.py  0007_add_failed_permanently_status.py  0008_simplify_status_choices.py  0009_convert_failed_permanently_to_failed.py  0010_add_failure_reason_field.py  0011_add_urlrequest_indexes.py  0012_add_chain_task_id_field.py  0013_make_request_id_primary_key.py  0014_unifiedsession.py  0015_optimize_unifiedsession_fields_and_indexes.py
api/services/: __init__.py  cache_service.py  response_service.py  search_service.py  service_container.py  session_service.py
api/tests/: __init__.py  test_unified_session.py
api/utils/: __init__.py  error_messages.py  performance_timer.py
api/views/: __init__.py  gateway_views.py  search_views.py  status_views.py  video_views.py
api/workflows/: __init__.py  search_workflow.py
docs/: DB_design_principles.md  ai_utils_interface_guide.md  ai_utils_vector_store_layer.md  db-normalize.md  db-performance-rules.md  parallel_processing_integration.md  search_process_integration_models.md  search_service_guide.md  video_processing_database_relationships.md
examples/: ai_utils_demo.py  centralized_utils_demo.py  complete_ai_demo.py  embedding_demo.py  llm_demo.py  parallel_processing_example.py  query_processor_demo.py  search.py  search_demo.py  search_process_integration_demo.py  session_utils_demo.py  simple_ai_demo.py  test_iterative_search.py  topic_query_integration.py  vector_store_demo.py
query_processor/: admin.py  apps.py  models.py  tasks.py  validators.py
query_processor/migrations/: 0001_initial.py  0002_remove_queryrequest_query_proce_search__e88226_idx_and_more.py  0003_alter_queryrequest_concepts_and_more.py  (+1 more)
scripts/: manage_logs.sh  monitor_transcripts.py
telemetry/: __init__.py
telemetry/exceptions/: __init__.py  (+4 more)
tests/: __init__.py  test_core_utils.py  test_gateway_views.py  test_models.py  test_modular_imports.py  test_monitoring.py  test_natural_keys.py  test_primary_key_migrations.py  test_schemas.py  test_session_service.py
topic/: admin.py  models.py  parallel_tasks.py  serializers.py  tasks.py  tests.py  urls.py  views.py
video_processor/: admin.py  apps.py  config.py  models.py  serializer.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
yt_summariser/: asgi.py  celery.py  mypy_settings.py  settings.py  urls.py  wsgi.py
yt_workflow/: admin.py  apps.py  models.py  orchestrator.py  tasks.py
(+180 files in other folders)
